i3/src/config/new/parser-specs/configParser.cpp

// Generated from parser-specs/config.g4 by ANTLR 4.11.1


#include "configListener.h"

#include "configParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ConfigParserStaticData final {
  ConfigParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ConfigParserStaticData(const ConfigParserStaticData&) = delete;
  ConfigParserStaticData(ConfigParserStaticData&&) = delete;
  ConfigParserStaticData& operator=(const ConfigParserStaticData&) = delete;
  ConfigParserStaticData& operator=(ConfigParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag configParserOnceFlag;
ConfigParserStaticData *configParserStaticData = nullptr;

void configParserInitialize() {
  assert(configParserStaticData == nullptr);
  auto staticData = std::make_unique<ConfigParserStaticData>(
    std::vector<std::string>{
      "file", "stmt", "arguments", "stmt_mode", "stmt_mode_options", "stmt_mode_stmts", 
      "color", "color_single", "color_multiple", "exec", "exec_options", 
      "popup_during_fullscreen", "popup_during_fullscreen_value", "restart_state", 
      "ipc_kill_timeout", "ipc_socket", "workspace", "workspace_name", "title_align", 
      "title_align_value", "focus_on_window_activation", "focus_on_window_activation_value", 
      "force_display_urgency_hint", "workspace_auto_back_and_forth", "focus_wrapping", 
      "force_focus_wrapping", "mouse_warping", "mouse_warping_value", "focus_follows_mouse", 
      "no_focus", "assign", "assign_target", "assign_target_workspace", 
      "assign_target_number", "assign_target_output", "for_window", "criteria", 
      "criterion", "value_criterion", "hide_edge_borders", "border_type", 
      "default_border", "default_border_type", "border_style", "workspace_layout", 
      "workspace_layout_value", "default_orientation", "default_orientation_value", 
      "floating_modifier", "floating_minimum_size", "floating_maximum_size", 
      "dimension", "font", "set", "set_from_resource", "include", "binding", 
      "binding_options", "modifier", "keybinding"
    },
    std::vector<std::string>{
      "", "'mode'", "'{'", "'}'", "'--pango_markup'", "'client.background'", 
      "'client.focused_inactive'", "'client.focused'", "'client.unfocused'", 
      "'client.urgent'", "'client.placeholder'", "'exec'", "'exec_always'", 
      "'--no-startup-id'", "'popup_during_fullscreen'", "'ignore'", "'leave_fullscreen'", 
      "'smart'", "'restart_state'", "'ipc_kill_timeout'", "'ipc_socket'", 
      "'ipc-socket'", "'workspace'", "'output'", "'title_align'", "'left'", 
      "'center'", "'right'", "'focus_on_window_activation'", "'urgent'", 
      "'focus'", "'none'", "'force_display_urgency_hint'", "'ms'", "'workspace_auto_back_and_forth'", 
      "'focus_wrapping'", "'force'", "'force_focus_wrapping'", "'mouse_warping'", 
      "'focus_follows_mouse'", "'no_focus'", "'assign'", "'\\u2192'", "'number'", 
      "'up'", "'down'", "'primary'", "'for_window'", "'['", "']'", "'tiling'", 
      "'floating'", "'all'", "'class'", "'instance'", "'window_role'", "'con_id'", 
      "'id'", "'window_type'", "'title'", "'machine'", "'floating_from'", 
      "'tiling_from'", "'='", "'hide_edge_borders'", "'vertical'", "'horizontal'", 
      "'both'", "'default_border'", "'new_window'", "'default_floating_border'", 
      "'new_float'", "'normal'", "'pixel'", "'1pixel'", "'workspace_layout'", 
      "'default'", "'stacking'", "'stacked'", "'tabbed'", "'default_orientation'", 
      "'auto'", "'floating_modifier'", "'floating_minimum_size'", "'floating_maximum_size'", 
      "'x'", "'font'", "'set'", "'set_from_resource'", "'include'", "'bindsym'", 
      "'bindcode'", "'bind'", "'--release'", "'--border'", "'--whole-window'", 
      "'--exclude-titlebar'", "'+'", "'Mod1'", "'Mod2'", "'Mod3'", "'Mod4'", 
      "'Mod5'", "'Shift'", "'Control'", "'Ctrl'", "'Mode_switch'", "'Group1'", 
      "'Group2'", "'Group3'", "'Group4'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "COMMENT", "WS", "BOOL", "VARIABLE", 
      "STRING", "NUMBER", "EOL"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  configParserStaticData = staticData.release();
}

}

configParser::configParser(TokenStream *input) : configParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

configParser::configParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  configParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *configParserStaticData->atn, configParserStaticData->decisionToDFA, configParserStaticData->sharedContextCache, options);
}

configParser::~configParser() {
  delete _interpreter;
}

const atn::ATN& configParser::getATN() const {
  return *configParserStaticData->atn;
}

std::string configParser::getGrammarFileName() const {
  return "config.g4";
}

const std::vector<std::string>& configParser::getRuleNames() const {
  return configParserStaticData->ruleNames;
}

const dfa::Vocabulary& configParser::getVocabulary() const {
  return configParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView configParser::getSerializedATN() const {
  return configParserStaticData->serializedATN;
}


//----------------- FileContext ------------------------------------------------------------------

configParser::FileContext::FileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* configParser::FileContext::EOF() {
  return getToken(configParser::EOF, 0);
}

std::vector<configParser::StmtContext *> configParser::FileContext::stmt() {
  return getRuleContexts<configParser::StmtContext>();
}

configParser::StmtContext* configParser::FileContext::stmt(size_t i) {
  return getRuleContext<configParser::StmtContext>(i);
}

std::vector<tree::TerminalNode *> configParser::FileContext::EOL() {
  return getTokens(configParser::EOL);
}

tree::TerminalNode* configParser::FileContext::EOL(size_t i) {
  return getToken(configParser::EOL, i);
}


size_t configParser::FileContext::getRuleIndex() const {
  return configParser::RuleFile;
}

void configParser::FileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFile(this);
}

void configParser::FileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFile(this);
}

configParser::FileContext* configParser::file() {
  FileContext *_localctx = _tracker.createInstance<FileContext>(_ctx, getState());
  enterRule(_localctx, 0, configParser::RuleFile);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(121);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 145054223851490) != 0 || (((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & 534579441) != 0) {
      setState(120);
      stmt();
    }
    setState(129);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == configParser::EOL) {
      setState(123);
      match(configParser::EOL);
      setState(125);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & 145054223851490) != 0 || (((_la - 64) & ~ 0x3fULL) == 0) &&
        ((1ULL << (_la - 64)) & 534579441) != 0) {
        setState(124);
        stmt();
      }
      setState(131);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(132);
    match(configParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

configParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

configParser::SetContext* configParser::StmtContext::set() {
  return getRuleContext<configParser::SetContext>(0);
}

configParser::Set_from_resourceContext* configParser::StmtContext::set_from_resource() {
  return getRuleContext<configParser::Set_from_resourceContext>(0);
}

configParser::IncludeContext* configParser::StmtContext::include() {
  return getRuleContext<configParser::IncludeContext>(0);
}

configParser::BindingContext* configParser::StmtContext::binding() {
  return getRuleContext<configParser::BindingContext>(0);
}

configParser::Stmt_modeContext* configParser::StmtContext::stmt_mode() {
  return getRuleContext<configParser::Stmt_modeContext>(0);
}

configParser::FontContext* configParser::StmtContext::font() {
  return getRuleContext<configParser::FontContext>(0);
}

configParser::Floating_minimum_sizeContext* configParser::StmtContext::floating_minimum_size() {
  return getRuleContext<configParser::Floating_minimum_sizeContext>(0);
}

configParser::Floating_maximum_sizeContext* configParser::StmtContext::floating_maximum_size() {
  return getRuleContext<configParser::Floating_maximum_sizeContext>(0);
}

configParser::Floating_modifierContext* configParser::StmtContext::floating_modifier() {
  return getRuleContext<configParser::Floating_modifierContext>(0);
}

configParser::Default_orientationContext* configParser::StmtContext::default_orientation() {
  return getRuleContext<configParser::Default_orientationContext>(0);
}

configParser::Workspace_layoutContext* configParser::StmtContext::workspace_layout() {
  return getRuleContext<configParser::Workspace_layoutContext>(0);
}

configParser::Default_borderContext* configParser::StmtContext::default_border() {
  return getRuleContext<configParser::Default_borderContext>(0);
}

configParser::Hide_edge_bordersContext* configParser::StmtContext::hide_edge_borders() {
  return getRuleContext<configParser::Hide_edge_bordersContext>(0);
}

configParser::For_windowContext* configParser::StmtContext::for_window() {
  return getRuleContext<configParser::For_windowContext>(0);
}

configParser::AssignContext* configParser::StmtContext::assign() {
  return getRuleContext<configParser::AssignContext>(0);
}

configParser::No_focusContext* configParser::StmtContext::no_focus() {
  return getRuleContext<configParser::No_focusContext>(0);
}

configParser::Focus_follows_mouseContext* configParser::StmtContext::focus_follows_mouse() {
  return getRuleContext<configParser::Focus_follows_mouseContext>(0);
}

configParser::Mouse_warpingContext* configParser::StmtContext::mouse_warping() {
  return getRuleContext<configParser::Mouse_warpingContext>(0);
}

configParser::Focus_wrappingContext* configParser::StmtContext::focus_wrapping() {
  return getRuleContext<configParser::Focus_wrappingContext>(0);
}

configParser::Force_focus_wrappingContext* configParser::StmtContext::force_focus_wrapping() {
  return getRuleContext<configParser::Force_focus_wrappingContext>(0);
}

configParser::Workspace_auto_back_and_forthContext* configParser::StmtContext::workspace_auto_back_and_forth() {
  return getRuleContext<configParser::Workspace_auto_back_and_forthContext>(0);
}

configParser::Force_display_urgency_hintContext* configParser::StmtContext::force_display_urgency_hint() {
  return getRuleContext<configParser::Force_display_urgency_hintContext>(0);
}

configParser::Focus_on_window_activationContext* configParser::StmtContext::focus_on_window_activation() {
  return getRuleContext<configParser::Focus_on_window_activationContext>(0);
}

configParser::Title_alignContext* configParser::StmtContext::title_align() {
  return getRuleContext<configParser::Title_alignContext>(0);
}

configParser::WorkspaceContext* configParser::StmtContext::workspace() {
  return getRuleContext<configParser::WorkspaceContext>(0);
}

configParser::Ipc_socketContext* configParser::StmtContext::ipc_socket() {
  return getRuleContext<configParser::Ipc_socketContext>(0);
}

configParser::Ipc_kill_timeoutContext* configParser::StmtContext::ipc_kill_timeout() {
  return getRuleContext<configParser::Ipc_kill_timeoutContext>(0);
}

configParser::Restart_stateContext* configParser::StmtContext::restart_state() {
  return getRuleContext<configParser::Restart_stateContext>(0);
}

configParser::Popup_during_fullscreenContext* configParser::StmtContext::popup_during_fullscreen() {
  return getRuleContext<configParser::Popup_during_fullscreenContext>(0);
}

configParser::ExecContext* configParser::StmtContext::exec() {
  return getRuleContext<configParser::ExecContext>(0);
}

configParser::ColorContext* configParser::StmtContext::color() {
  return getRuleContext<configParser::ColorContext>(0);
}


size_t configParser::StmtContext::getRuleIndex() const {
  return configParser::RuleStmt;
}

void configParser::StmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt(this);
}

void configParser::StmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt(this);
}

configParser::StmtContext* configParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 2, configParser::RuleStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(165);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case configParser::T__86: {
        enterOuterAlt(_localctx, 1);
        setState(134);
        set();
        break;
      }

      case configParser::T__87: {
        enterOuterAlt(_localctx, 2);
        setState(135);
        set_from_resource();
        break;
      }

      case configParser::T__88: {
        enterOuterAlt(_localctx, 3);
        setState(136);
        include();
        break;
      }

      case configParser::T__89:
      case configParser::T__90:
      case configParser::T__91: {
        enterOuterAlt(_localctx, 4);
        setState(137);
        binding();
        break;
      }

      case configParser::T__0: {
        enterOuterAlt(_localctx, 5);
        setState(138);
        stmt_mode();
        break;
      }

      case configParser::T__85: {
        enterOuterAlt(_localctx, 6);
        setState(139);
        font();
        break;
      }

      case configParser::T__82: {
        enterOuterAlt(_localctx, 7);
        setState(140);
        floating_minimum_size();
        break;
      }

      case configParser::T__83: {
        enterOuterAlt(_localctx, 8);
        setState(141);
        floating_maximum_size();
        break;
      }

      case configParser::T__81: {
        enterOuterAlt(_localctx, 9);
        setState(142);
        floating_modifier();
        break;
      }

      case configParser::T__79: {
        enterOuterAlt(_localctx, 10);
        setState(143);
        default_orientation();
        break;
      }

      case configParser::T__74: {
        enterOuterAlt(_localctx, 11);
        setState(144);
        workspace_layout();
        break;
      }

      case configParser::T__67:
      case configParser::T__68:
      case configParser::T__69:
      case configParser::T__70: {
        enterOuterAlt(_localctx, 12);
        setState(145);
        default_border();
        break;
      }

      case configParser::T__63: {
        enterOuterAlt(_localctx, 13);
        setState(146);
        hide_edge_borders();
        break;
      }

      case configParser::T__46: {
        enterOuterAlt(_localctx, 14);
        setState(147);
        for_window();
        break;
      }

      case configParser::T__40: {
        enterOuterAlt(_localctx, 15);
        setState(148);
        assign();
        break;
      }

      case configParser::T__39: {
        enterOuterAlt(_localctx, 16);
        setState(149);
        no_focus();
        break;
      }

      case configParser::T__38: {
        enterOuterAlt(_localctx, 17);
        setState(150);
        focus_follows_mouse();
        break;
      }

      case configParser::T__37: {
        enterOuterAlt(_localctx, 18);
        setState(151);
        mouse_warping();
        break;
      }

      case configParser::T__34: {
        enterOuterAlt(_localctx, 19);
        setState(152);
        focus_wrapping();
        break;
      }

      case configParser::T__36: {
        enterOuterAlt(_localctx, 20);
        setState(153);
        force_focus_wrapping();
        break;
      }

      case configParser::T__33: {
        enterOuterAlt(_localctx, 21);
        setState(154);
        workspace_auto_back_and_forth();
        break;
      }

      case configParser::T__31: {
        enterOuterAlt(_localctx, 22);
        setState(155);
        force_display_urgency_hint();
        break;
      }

      case configParser::T__27: {
        enterOuterAlt(_localctx, 23);
        setState(156);
        focus_on_window_activation();
        break;
      }

      case configParser::T__23: {
        enterOuterAlt(_localctx, 24);
        setState(157);
        title_align();
        break;
      }

      case configParser::T__21: {
        enterOuterAlt(_localctx, 25);
        setState(158);
        workspace();
        break;
      }

      case configParser::T__19:
      case configParser::T__20: {
        enterOuterAlt(_localctx, 26);
        setState(159);
        ipc_socket();
        break;
      }

      case configParser::T__18: {
        enterOuterAlt(_localctx, 27);
        setState(160);
        ipc_kill_timeout();
        break;
      }

      case configParser::T__17: {
        enterOuterAlt(_localctx, 28);
        setState(161);
        restart_state();
        break;
      }

      case configParser::T__13: {
        enterOuterAlt(_localctx, 29);
        setState(162);
        popup_during_fullscreen();
        break;
      }

      case configParser::T__10:
      case configParser::T__11: {
        enterOuterAlt(_localctx, 30);
        setState(163);
        exec();
        break;
      }

      case configParser::T__4:
      case configParser::T__5:
      case configParser::T__6:
      case configParser::T__7:
      case configParser::T__8:
      case configParser::T__9: {
        enterOuterAlt(_localctx, 31);
        setState(164);
        color();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgumentsContext ------------------------------------------------------------------

configParser::ArgumentsContext::ArgumentsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t configParser::ArgumentsContext::getRuleIndex() const {
  return configParser::RuleArguments;
}

void configParser::ArgumentsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArguments(this);
}

void configParser::ArgumentsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArguments(this);
}

configParser::ArgumentsContext* configParser::arguments() {
  ArgumentsContext *_localctx = _tracker.createInstance<ArgumentsContext>(_ctx, getState());
  enterRule(_localctx, 4, configParser::RuleArguments);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(170);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 1 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1 + 1) {
        setState(167);
        matchWildcard(); 
      }
      setState(172);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Stmt_modeContext ------------------------------------------------------------------

configParser::Stmt_modeContext::Stmt_modeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* configParser::Stmt_modeContext::STRING() {
  return getToken(configParser::STRING, 0);
}

std::vector<configParser::Stmt_mode_optionsContext *> configParser::Stmt_modeContext::stmt_mode_options() {
  return getRuleContexts<configParser::Stmt_mode_optionsContext>();
}

configParser::Stmt_mode_optionsContext* configParser::Stmt_modeContext::stmt_mode_options(size_t i) {
  return getRuleContext<configParser::Stmt_mode_optionsContext>(i);
}

std::vector<configParser::Stmt_mode_stmtsContext *> configParser::Stmt_modeContext::stmt_mode_stmts() {
  return getRuleContexts<configParser::Stmt_mode_stmtsContext>();
}

configParser::Stmt_mode_stmtsContext* configParser::Stmt_modeContext::stmt_mode_stmts(size_t i) {
  return getRuleContext<configParser::Stmt_mode_stmtsContext>(i);
}

std::vector<tree::TerminalNode *> configParser::Stmt_modeContext::EOL() {
  return getTokens(configParser::EOL);
}

tree::TerminalNode* configParser::Stmt_modeContext::EOL(size_t i) {
  return getToken(configParser::EOL, i);
}


size_t configParser::Stmt_modeContext::getRuleIndex() const {
  return configParser::RuleStmt_mode;
}

void configParser::Stmt_modeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt_mode(this);
}

void configParser::Stmt_modeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt_mode(this);
}

configParser::Stmt_modeContext* configParser::stmt_mode() {
  Stmt_modeContext *_localctx = _tracker.createInstance<Stmt_modeContext>(_ctx, getState());
  enterRule(_localctx, 6, configParser::RuleStmt_mode);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(173);
    match(configParser::T__0);
    setState(177);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == configParser::T__3) {
      setState(174);
      stmt_mode_options();
      setState(179);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(180);
    match(configParser::STRING);
    setState(181);
    match(configParser::T__1);
    setState(183);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la - 87) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 87)) & 57) != 0) {
      setState(182);
      stmt_mode_stmts();
    }
    setState(189); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(185);
      match(configParser::EOL);
      setState(187);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la - 87) & ~ 0x3fULL) == 0) &&
        ((1ULL << (_la - 87)) & 57) != 0) {
        setState(186);
        stmt_mode_stmts();
      }
      setState(191); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == configParser::EOL);
    setState(193);
    match(configParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Stmt_mode_optionsContext ------------------------------------------------------------------

configParser::Stmt_mode_optionsContext::Stmt_mode_optionsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t configParser::Stmt_mode_optionsContext::getRuleIndex() const {
  return configParser::RuleStmt_mode_options;
}

void configParser::Stmt_mode_optionsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt_mode_options(this);
}

void configParser::Stmt_mode_optionsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<configListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt_mode_options(this);
}

configParser::Stmt_mode_optionsContext* configParser::stmt_mode_options() {
  Stmt_mode_optionsContext *_localctx = _tracker.createInstance<Stmt_mode_optionsContext>(_ctx, getState());
  enterRule(_localctx, 8, configParser::RuleStmt_mode_options);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(195);
    match(configParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Stmt_mode_stmtsContext ------------------------------------------------------------------

configParser::Stmt_mode_stmtsContext::Stmt_mode_stmtsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

configParser::SetContext* configParser::Stmt_mode_stmtsContext::set() {
  return getRuleContext<configParser::SetContext>(0);
}

configParser::BindingContext* configParser::Stmt_mode_stmtsContext::binding() {
  return getRuleContext<configParser::BindingContext>(0);
}


size_t configParser::Stmt_mode_stmtsContext::getRuleIndex() const {
  return configParser::RuleStmt_mode_stmts;
}
